# microstructure_inflators

./: .bookignore  .gitignore  .gitmodules  .hgignore  .travis.yml  CMakeLists.txt  README.md  SUMMARY.md  compile.sh  configure.sh  extract-connected.py
Luigi/wireinflator2D/: CMakeLists.txt  Makefile  test_wire2d.pro
Nico/printing_optimizer/: CMakeLists.txt  README  edge_mesh_type.h  glwidget.cpp  glwidget.h  main.cpp  main_command.cpp  tri_mesh_type.h
isosurface_inflator/: AutomaticDifferentiation.hh  BoxIntersection1DFeatures.hh  BoxIntersectionMesher.cc  BoxIntersectionMesher.hh  CGALClippedVolumeMesher.cc  CGALClippedVolumeMesher.hh  CMakeLists.txt  ConvexHullTriangulation.cc  CubicSymmetry.hh  FuzzySign.hh  GraphLineMesher.hh  IGLSurfaceMesherMC.cc  IGLSurfaceMesherMC.hh  InflatorTypes.hh  Isometries.hh  IsosurfaceInflator.cc  IsosurfaceInflator.hh  IsosurfaceInflatorConfig.hh  IsosurfaceInflatorImpl.hh  Joint.hh  Makefile  MesherBase.hh  MeshingOptions.cc  MeshingOptions.hh  MidplaneMesher.cc  MidplaneMesher.hh  NodePositioners.hh  PaperVisualizationSDFunc.hh  PatternSignedDistance.hh  PostProcess.cc  PostProcess.hh  PrintabilityCheck.cc  PrintabilityConstraints.cc  ShapeVelocity.hh  SignedDistance.hh  SignedDistance_cli.cc  SnapAndReflect.hh  SphereConvexHull.hh  SpherePoints.hh  StitchedWireMesh.hh  (+16 more)
isosurface_inflator/JointViewer/: ConvexHull.hh  build.sh  plot_sd.gpi  viewer.cc
isosurface_inflator/MarchingSquares/: AdaptiveEvaluator.hh  Grid.hh  MarchingSquaresStitch.hh
isosurface_inflator/tests/: TestStitchedWireMesh.cc  TestSymmetry.cc  TestWireMesh.cc  coord_extract  test_spherepoints.cc  usage.sh
pattern_optimization/: BaseCellOperations.hh  BoundConstraints.hh  BoundaryPerturbationInflator.hh  BoundaryPerturbationInflatorRemesher.hh  CMakeLists.txt  Constraint.hh  CreateJob.cc  EvaluatedConstraint.hh  EvaluatedObjectiveTerm.hh  GenIsosurfaceJob.cc  GetQuadDeformations_cli.cc  GradientComponentValidation.cc  Inflator.hh  InflatorBase.hh  Inflator_cli.cc  IsoinflatorWrapper.hh  IterateBase.hh  IterateFactory.hh  IterateManager.hh  IterateManagerBase.hh  LookupTable.hh  LpHoleInflator.hh  MakeInflator.cc  MakeInflator.hh  Makefile  Makefile_m01  ObjectiveTerm.hh  OptimizerConfig.hh  ParamRegion_cli  ParamRegion_cli.cc  ParameterConstraint.hh  PatternOptimization.hh  PatternOptimizationConfig.hh  PatternOptimizationIterate.hh  PatternOptimizationJob.cc  PatternOptimizationJob.hh  PatternOptimizationMorteza.inl  PatternOptimization_DeformedCell_cli.cc  PatternOptimization_cli.cc  PatternOptimization_quadMesh_cli.cc  (+10 more)
pattern_optimization/constraints/: PositioningConstraint.hh  Printability.hh  TensorFit.hh
pattern_optimization/example/: analyze_output.pl  plot.gpi
pattern_optimization/experiments/: analyze.pl  analyze_inflation_failures.sh  equality_constraints.txt  filter.sh  filter_field.sh  plot.sh  plot_filter_dof.sh
pattern_optimization/inflators/: BoundaryPerturbationInflator.cc  BoundaryPerturbationInflator.hh  ConstrainedIsoinflator.hh  EqualityConstrainedInflator.hh  HexaPillarsInflator.cpp  HexaPillarsInflator.h  IsoinflatorWrapper.cc  IsoinflatorWrapper.hh  JamesInflatorWrapper.cc  JamesInflatorWrapper.hh  LpHoleInflator.hh  LuigiInflatorWrapper.cc  LuigiInflatorWrapper.hh
pattern_optimization/objective_terms/: IsotropicFit.hh  ProximityRegularization.hh  TargetVolume.hh  TensorFit.hh
pattern_optimization/optimizers/: ceres.cc  ceres.hh  dlib.cc  gradient_descent.cc  knitro.hh  nlopt.cc  nlopt.hh
pattern_optimization/render/: Makefile  Render_cli  inflate_viewer.cc
shape_optimization/: CMakeLists.txt  GenerateParametersMask.cc  GenerateParametersMask_cli.cc  IsosurfaceShapeDerivativeValidation_cli.cc  MicroscopicStress.hh  NonPeriodicCellOperations.hh  ParametersMask.h  ShapeDerivativeValidation_cli.cc  ShapeOptimizationIterate.hh  ShapeOptimization_cli.cc  StressObjectiveTerm.hh  VolumeShapeDerivativeValidation_cli.cc
shape_optimization/doc/: doubts-1.txt  doubts-2.pages  doubts-2.txt  shape-optimization.tex
shape_optimization/example_dirichlet/: run_validation.sh
shape_optimization/example_neumann/: run.sh  run_validation.sh
shape_optimization/viewer/: CMakeLists.txt  main.cpp  mesh_tools.h  simulation_tools.h
tests/: CMakeLists.txt  test_aabb.cc  test_bilinear.cc  test_inflation.cc  test_isosurfacejob.cc  test_stitching.cc  test_stitching.cpp
tools/hex-creator/: AuxeticHexaPillarsCreator.cpp  CMakeLists.txt  HexaPillarsCreator.cpp  HexaPillarsCreatorSimpler.cpp  README.md  README.md.html  auxetic-chiral-creator.py  auxetic-chiral-with-constant-vertices.py  auxetic-star-creator.py  comparison-pillar-types.py  hex-creator-igor-parameters.py  hex-creator.py  hexa-many-pillars-creator.py  hexa-many-pillars-igor-parameters.py  hexa-pillars-optimization.py  hexa-pillars-sweep.py  hexa-quasi-pillars-creator.py  hexa-to-general-params.py  hexlib.h  hexlib.py  instances-set-generator.py  interactiveplotlib.py  lut-to-mat.py  msh-to-warped-tiling.py  ninja-sweep.py  pillar2quasipillar-storyline.py  plot-hexa-pillars_info.py  plot_luTable.py  refined-meshing_opts.json  run-homogenization.py  run-igor-experiments.py  run-optimization.py  shape-derivatives-path.py  singlepillar2manypillars-storyline.py  six-leaf-clover-creator.py  theoretical_limits.py
topology_enumeration/: CMakeLists.txt  Makefile  enumerate.cc  intersection_check.hh  match.cc  pattern_info.cc
worst_case_stress/: BoundaryPerturbationIterate.hh  CMakeLists.txt  DiscreteShapeDerivativeValidation_cli.cc  GradientComponentValidation.cc  InflatorTraits.inl  LpHoleGradientComponentValidation.cc  LpHoleInflator_cli.cc  MacroMicroStress_cli.cc  Makefile  WCSObjective.hh  WCSObjectiveTerm.hh  WCSOptimization.hh  WCSOptimization_cli.cc  WCSRemeshingOptimization_cli.cc  WCS_cli.cc  WCStressOptimizationConfig.hh  WCStressOptimizationIterate.hh  WorstCaseStress.hh  analyze_perturb_iterates.py  analyze_perturb_remesh_iterates.py  bp_convergence_plots.gpi  run_lphole_gradient_validation.sh  sample_fields.py
worst_case_stress/doc/: DiscreteHomogenizedTensorGradient.tex  (+3 more)
(+1086 files in other folders)
